-[FRONTEND] Add the JWT token to all authorized backend requests. This is quite easy if the JWT token comes on the server response cookie. -[ACCEPTANCE] Remove tests that should get access to application data.
Former-commit-id: d284861c9da1fccee3e91fce6d8642ebfab65480

--- a/NeoCom.Infinity.Frontend/e2e/tsconfig.json
+++ b/NeoCom.Infinity.Frontend/e2e/tsconfig.json
@@ -9,9 +9,11 @@
       "jasminewd2",
       "node"
     ],
+    "baseUrl": "./",
     "paths": {
       "@pages/*": ["src/pages/*"],
-      "@domain/*": ["src/app/domain/*"]
+      "@domain/*": ["src/app/domain/*"],
+      "@steps/*": ["e2e/src/steps/*"]
     }
   }
 }
