-[NIF02.01]-Check that the Dashboard Home Page has the common panels.
-[FRONTEND] Added the navigation to the dashboard once the validation is completed.

Former-commit-id: a0a8c39ff81309300d57f19b5148ade5aaf70e20

--- a/NeoCom.Infinity.Frontend/e2e/tsconfig.json
+++ b/NeoCom.Infinity.Frontend/e2e/tsconfig.json
@@ -13,7 +13,8 @@
     "paths": {
       "@pages/*": ["src/pages/*"],
       "@domain/*": ["src/app/domain/*"],
-      "@steps/*": ["e2e/src/steps/*"]
+      "@steps/*": ["src/steps/*"],
+      "@support/*": ["src/support/*"]
     }
   }
 }
