-[FRONTEND] Store the Credential also on the session storage. So after the user is authenticated we can freely navigate the application until the session expires or the browser is closed.
Former-commit-id: d28a23a7a6f33192a50df4af092d850c4ed04465

--- a/NeoCom.Infinity.Frontend/support/backend-simulation/apisim.yaml
+++ b/NeoCom.Infinity.Frontend/support/backend-simulation/apisim.yaml
@@ -17,7 +17,8 @@ response:
           "jsonClass": "Credential",
           "uniqueId": "tranquility/92223647",
           "accountId": 92223647,
-          "accountName": "Adam Antinoo",
+          "accountName": "Beth Ripley",
+          "corporationId": 98384726,
           "assetsCount": 1476,
           "walletBalance": 6.309543632E8,
           "raceName": "Amarr",
