--- a/NeoCom.Infinity.Frontend/package.json
+++ b/NeoCom.Infinity.Frontend/package.json
@@ -36,6 +36,7 @@
     "@angular/router": "8.2.3",
     "angular-webstorage-service": "1.0.2",
     "bootstrap": "4.3.1",
+    "date-fns": "2.5.0",
     "font-awesome": "4.7.0",
     "jwt-decode": "2.2.0",
     "ng-drag-drop": "5.0.0",
