--- a/NeoCom.Infinity.Frontend/package.json
+++ b/NeoCom.Infinity.Frontend/package.json
@@ -1,78 +1,78 @@
 {
-  "name": "neocom.infinity",
-  "version": "0.16.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "compodoc": "compodoc -p tsconfig.json --theme laravel",
-    "typedoc": "typedoc --mode modules -module commonjs --exclude **/*.spec.ts --out docs/typedoc src/app",
-    "start:support": "bash ./support/support-services.sh start",
-    "start:dev": "npm run start:support && ng serve --progress --proxy-config proxy.conf.json --base-href /app",
-    "start:aot": "ng serve --aot --progress --public-host neocom.infinity.dimensinfin.org --proxy-config proxy.conf.json --base-href /app",
-    "start:prod": "ng serve --base-href /app",
-    "cucumber": "./node_modules/cucumber/bin/cucumber-js e2e/src/features/",
-    "stop:support": "bash ./support/support-services.sh stop",
-    "restart:support": "npm run stop:support && npm run start:support",
-    "build:dev": "ng build",
-    "build:prod": "ng build --aot --prod --configuration production",
-    "test:dev": "ng test --code-coverage --source-map --watch --progress ",
-    "test:prod": "ng test --watch=false --no-progress --browsers=ChromeHeadlessCI",
-    "e2e": "ng e2e --port 4300",
-    "e2e:atdd": "ng e2e --port 4300 --protractor-config e2e/protractor-cucumber.conf.js",
-    "e2e:compile": "tsc -p e2e"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "8.2.3",
-    "@angular/common": "8.2.3",
-    "@angular/compiler": "8.2.3",
-    "@angular/core": "8.2.3",
-    "@angular/forms": "8.2.3",
-    "@angular/platform-browser": "8.2.3",
-    "@angular/platform-browser-dynamic": "8.2.3",
-    "@angular/router": "8.2.3",
-    "angular-webstorage-service": "1.0.2",
-    "bootstrap": "4.3.1",
-    "date-fns": "2.5.0",
-    "font-awesome": "4.7.0",
-    "jwt-decode": "2.2.0",
-    "ng-drag-drop": "5.0.0",
-    "ng6-toastr-notifications": "1.0.4",
-    "ngx-toastr": "10.2.0",
-    "rollbar": "2.13.0",
-    "rxjs": "6.4.0",
-    "tslib": "1.10.0",
-    "zone.js": "0.9.1"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "0.803.1",
-    "@angular/cli": "8.3.1",
-    "@angular/compiler-cli": "8.2.3",
-    "@angular/language-service": "8.2.3",
-    "@types/chai": "4.2.2",
-    "@types/cucumber": "4.0.7",
-    "@types/jasmine": "3.3.8",
-    "@types/jasminewd2": "2.0.3",
-    "@types/node": "8.9.4",
-    "chai": "4.2.0",
-    "codelyzer": "^5.0.0",
-    "cucumber": "5.1.0",
-    "jasmine-core": "3.4.0",
-    "jasmine-spec-reporter": "4.2.1",
-    "karma": "4.1.0",
-    "karma-chrome-launcher": "2.2.0",
-    "karma-coverage-istanbul-reporter": "2.0.1",
-    "karma-jasmine": "2.0.1",
-    "karma-jasmine-html-reporter": "1.4.0",
-    "protractor": "5.4.0",
-    "protractor-console-plugin": "0.1.1",
-    "protractor-cucumber-framework": "6.1.3",
-    "protractor-multiple-cucumber-html-reporter-plugin": "1.8.1",
-    "ts-node": "7.0.0",
-    "tslint": "5.15.0",
-    "typescript": "3.5.3"
-  }
+    "name": "neocom.infinity",
+    "version": "0.16.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "test": "ng test",
+        "lint": "ng lint",
+        "compodoc": "compodoc -p tsconfig.json --theme laravel",
+        "typedoc": "typedoc --mode modules -module commonjs --exclude **/*.spec.ts --out docs/typedoc src/app",
+        "start:support": "bash ./support/support-services.sh start",
+        "start:dev": "npm run start:support && ng serve --progress --proxy-config proxy.conf.json --base-href /app",
+        "start:aot": "ng serve --aot --progress --public-host neocom.infinity.dimensinfin.org --proxy-config proxy.conf.json --base-href /app",
+        "start:prod": "ng serve --base-href /app",
+        "cucumber": "./node_modules/cucumber/bin/cucumber-js e2e/src/features/",
+        "stop:support": "bash ./support/support-services.sh stop",
+        "restart:support": "npm run stop:support && npm run start:support",
+        "build:dev": "ng build",
+        "build:prod": "ng build --aot --prod --configuration production",
+        "test:dev": "ng test --code-coverage --source-map --watch --progress ",
+        "test:prod": "ng test --watch=false --no-progress --browsers=ChromeHeadlessCI",
+        "e2e": "ng e2e --port 4300",
+        "e2e:atdd": "ng e2e --port 4300 --protractor-config e2e/protractor-cucumber.conf.js",
+        "e2e:compile": "tsc -p e2e"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "8.2.3",
+        "@angular/common": "8.2.3",
+        "@angular/compiler": "8.2.3",
+        "@angular/core": "8.2.3",
+        "@angular/forms": "8.2.3",
+        "@angular/platform-browser": "8.2.3",
+        "@angular/platform-browser-dynamic": "8.2.3",
+        "@angular/router": "8.2.3",
+        "angular-webstorage-service": "1.0.2",
+        "bootstrap": "4.3.1",
+        "date-fns": "2.5.0",
+        "font-awesome": "4.7.0",
+        "jwt-decode": "2.2.0",
+        "ng-drag-drop": "5.0.0",
+        "ng6-toastr-notifications": "1.0.4",
+        "ngx-toastr": "10.2.0",
+        "rollbar": "2.13.0",
+        "rxjs": "6.4.0",
+        "tslib": "1.10.0",
+        "zone.js": "0.9.1"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "0.803.1",
+        "@angular/cli": "8.3.1",
+        "@angular/compiler-cli": "8.2.3",
+        "@angular/language-service": "8.2.3",
+        "@types/chai": "4.2.2",
+        "@types/cucumber": "4.0.7",
+        "@types/jasmine": "3.3.8",
+        "@types/jasminewd2": "2.0.3",
+        "@types/node": "8.9.4",
+        "chai": "4.2.0",
+        "codelyzer": "5.0.0",
+        "cucumber": "5.1.0",
+        "jasmine-core": "3.4.0",
+        "jasmine-spec-reporter": "4.2.1",
+        "karma": "4.1.0",
+        "karma-chrome-launcher": "2.2.0",
+        "karma-coverage-istanbul-reporter": "2.0.1",
+        "karma-jasmine": "2.0.1",
+        "karma-jasmine-html-reporter": "1.4.0",
+        "protractor": "5.4.0",
+        "protractor-console-plugin": "0.1.1",
+        "protractor-cucumber-framework": "6.1.3",
+        "protractor-multiple-cucumber-html-reporter-plugin": "1.8.1",
+        "ts-node": "7.0.0",
+        "tslint": "5.15.0",
+        "typescript": "3.5.3"
+    }
 }
