-[CONFIGURATION] Correct the local configuration to add the home landing page and the integration with the backend on heroku.
Former-commit-id: e7b40015637891d11fd9fb1972b9c7c5665148f2

--- a/NeoCom.Infinity.Frontend/package.json
+++ b/NeoCom.Infinity.Frontend/package.json
@@ -10,13 +10,14 @@
         "compodoc": "compodoc -p tsconfig.json --theme laravel",
         "typedoc": "typedoc --mode modules -module commonjs --exclude **/*.spec.ts --out docs/typedoc src/app",
         "start:support": "bash ./support/support-services.sh start",
-        "start:dev": "npm run start:support && ng serve --progress --proxy-config proxy.conf.json --base-href /app",
-        "start:aot": "ng serve --aot --progress --public-host neocom.infinity.dimensinfin.org --proxy-config proxy.conf.json --base-href /app",
+        "start:dev": "ng serve --progress --proxy-config proxy.conf.json --base-href /app --public-host neocom.infinity.local",
+        "start:server": "node server.js",
         "start:prod": "ng serve --base-href /app",
         "cucumber": "./node_modules/cucumber/bin/cucumber-js e2e/src/features/",
         "stop:support": "bash ./support/support-services.sh stop",
         "restart:support": "npm run stop:support && npm run start:support",
-        "build:dev": "ng build",
+        "build:dev": "ng build --base-href /app",
+        "build:devold": "rm -rf app && ng build --base-href /app && mv dist/NeoCom-Infinity/ app",
         "build:prod": "ng build --aot --prod --configuration production",
         "test:dev": "ng test --code-coverage --source-map --watch --progress ",
         "test:prod": "ng test --watch=false --no-progress --browsers=ChromeHeadlessCI",
@@ -37,6 +38,7 @@
         "angular-webstorage-service": "1.0.2",
         "bootstrap": "4.3.1",
         "date-fns": "2.5.0",
+        "express": "4.17.1",
         "font-awesome": "4.7.0",
         "jwt-decode": "2.2.0",
         "ng-drag-drop": "5.0.0",
