--- a/NeoCom.Infinity.Frontend/package.json
+++ b/NeoCom.Infinity.Frontend/package.json
@@ -1,6 +1,6 @@
 {
     "name": "neocom.infinity",
-    "version": "0.16.0",
+    "version": "0.16.1",
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
@@ -11,13 +11,11 @@
         "typedoc": "typedoc --mode modules -module commonjs --exclude **/*.spec.ts --out docs/typedoc src/app",
         "start:support": "bash ./support/support-services.sh start",
         "start:dev": "ng serve --progress --proxy-config proxy.conf.json --base-href /app --public-host neocom.infinity.local",
-        "start:server": "node server.js",
-        "start:prod": "ng serve --base-href /app",
-        "cucumber": "./node_modules/cucumber/bin/cucumber-js e2e/src/features/",
+        "start:server": "npm run build:dev && node server.js",
         "stop:support": "bash ./support/support-services.sh stop",
-        "restart:support": "npm run stop:support && npm run start:support",
         "build:dev": "ng build --base-href /app",
         "build:prod": "ng build --aot --prod --configuration production --base-href /app",
+        "cucumber": "./node_modules/cucumber/bin/cucumber-js e2e/src/features/",
         "test:dev": "ng test --code-coverage --source-map --watch --progress ",
         "test:prod": "ng test --watch=false --no-progress --browsers=ChromeHeadlessCI",
         "e2e": "ng e2e --port 4300",
@@ -66,6 +64,7 @@
         "@types/jasminewd2": "2.0.3",
         "@types/node": "8.9.4",
         "chai": "4.2.0",
+        "chromedriver": "^77.0.0",
         "codelyzer": "5.0.0",
         "cucumber": "5.1.0",
         "jasmine-core": "3.4.0",
@@ -79,6 +78,7 @@
         "protractor-console-plugin": "0.1.1",
         "protractor-cucumber-framework": "6.1.3",
         "protractor-multiple-cucumber-html-reporter-plugin": "1.8.1",
+        "selenium-webdriver": "^4.0.0-alpha.5",
         "ts-node": "7.0.0",
         "tslint": "5.15.0",
         "typescript": "3.5.3"
