--- a/NeoCom.Infinity.Backend/backend.App/dependencies.gradle
+++ b/NeoCom.Infinity.Backend/backend.App/dependencies.gradle
@@ -54,6 +54,7 @@ dependencies {
 // - U N I T   T E S T I N G
 dependencies {
 //    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+//    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:2.23.4'
 }
