-[BACKEND] Updated the database. Removed the liquibase so most of the files have been reset to be reused.
Former-commit-id: 50f626ed713ccc01e061fb87684e2cf71e960e1f

--- a/NeoCom.Infinity.Backend/backend.App/src/main/resources/db/changelog/ddl-v0.2.2-credentials-table.yaml
+++ b/NeoCom.Infinity.Backend/backend.App/src/main/resources/db/changelog/ddl-v0.2.2-credentials-table.yaml
@@ -4,11 +4,10 @@ databaseChangeLog:
       author: NeoCom development team. Adam Antinoo main developer.
       changes:
         - createTable:
-            schemaName: neocom
             tableName: Credentials
             columns:
               - column:
-                  name: id
+                  name: uniqueCredential
                   type: varchar(32)
                   constraints:
                     primaryKey: true
@@ -20,6 +19,9 @@ databaseChangeLog:
               - column:
                   name: accountName
                   type: varchar(64)
+              - column:
+                  name: corporationId
+                  type: bigint
               - column:
                   name: dataSource
                   type: varchar(16)
@@ -47,3 +49,9 @@ databaseChangeLog:
               - column:
                   name: raceName
                   type: varchar(32)
+              - column:
+                  name: creationTime
+                  type: bigint
+              - column:
+                  name: lastUpdateTime
+                  type: bigint
