--- a/NeoCom.Infinity.Backend/backend.App/src/test/resources/docker/docker-compose.yml
+++ b/NeoCom.Infinity.Backend/backend.App/src/test/resources/docker/docker-compose.yml
@@ -10,17 +10,17 @@ services:
       - POSTGRES_USER=neocom
       - POSTGRES_PASSWORD=01.Alpha
 
-  apisimulator-esi:
-    container_name: esi-simulator
-    image: apimastery/apisimulator
-    ports:
-      - "6093:6090"
-    environment:
-      - APISIMULATOR_JAVA="/usr/lib/jvm/java-1.11.0-openjdk-amd64"
-      - APISIMULATOR_LOG_LEVEL=debug
-    volumes:
-      - "../esi-simulation:/esi-simulation"
-    entrypoint:
-      - "apisimulator start esi-simulation"
+#  apisimulator-esi:
+#    container_name: esi-simulator
+#    image: apimastery/apisimulator
+#    ports:
+#      - "6093:6090"
+#    environment:
+#      - APISIMULATOR_JAVA="/usr/lib/jvm/java-1.11.0-openjdk-amd64"
+#      - APISIMULATOR_LOG_LEVEL=debug
+#    volumes:
+#      - "../esi-simulation:/esi-simulation"
+#    entrypoint:
+#      - "apisimulator start esi-simulation"
 
 #  sudo docker run --rm -d --name apisimulator -p 6090:6090 -t  apisimulator start examples/response-templating
