--- a/NeoCom.Infinity.Backend/backend.AcceptanceTest/dependencies.gradle
+++ b/NeoCom.Infinity.Backend/backend.AcceptanceTest/dependencies.gradle
@@ -44,9 +44,9 @@ dependencies {
     testImplementation "com.squareup.retrofit2:converter-jackson:$retrofitVersion" // HTTP encapsulation and swagger support
     testImplementation 'com.auth0:java-jwt:3.3.0'
     // NEOCOM
-    implementation 'org.dimensinfin:CoreBase.core:3.2.0'
-    implementation 'org.dimensinfin:ESI.SwaggerApi:4.0.1'
-    implementation 'org.dimensinfin:NeoCom.DataManagement:0.16.1'
+    testImplementation 'org.dimensinfin:CoreBase.core:3.2.0'
+    testImplementation 'org.dimensinfin:ESI.SwaggerApi:4.0.1'
+    testImplementation 'org.dimensinfin:NeoCom.DataManagement:0.16.1'
 }
 
 sourceSets {
