--- a/NeoCom.Infinity.Backend/backend.App/src/test/resources/esi-simulation/apisim.yaml
+++ b/NeoCom.Infinity.Backend/backend.App/src/test/resources/esi-simulation/apisim.yaml
@@ -332,31 +332,20 @@ response:
 
 ---
 
-simlet: corporation-machaque
+simlet: corporations-machaque
 
 request:
   - method: GET
   - uriPathPattern: "/corporations/{corporation_id}/"
 
 response:
-  from: stub
+  from: template
   status: 200
   headers:
     - "Content-Type: application/json"
-  body: |+
-    {
-      "ceo_id": 92223647,
-      "creator_id": 92223647,
-      "date_founded": "2015-03-16T09:28:02Z",
-      "description": "<font size=\"12\" color=\"#bfffffff\"></font><font size=\"18\" color=\"#bfffffff\"><b>Industrias Machaque</b><br><br><br></font><font size=\"14\" color=\"#bfffffff\">Bienvenido a la página de descripción de Industrias Machaque.<br><br>El objeto de esta corporación es, además de hacer ricos en ISK a sus miembros, el gestionar los recursos disponibles de minería y de transporte logístico. Actualmente no aceptamos nuevos miembros ya que esta es una sociedad instrumental en un paraiso fiscal y no queremos compartir ese paraiso (de momento).<br><br>Estamos especializados en Industria manufacturera de tecnología T2. Podemos establecer relaciones de consultoría sobre gestión, planificación y logística para colaborar con otras corporaciones, principalmente de habla hispana, para aumentar la potencia económica de nuestras corporaciones. El “que inventen ellos” se ha terminado.<br><br>Para cualquier tema ponte en contacto con nuestro CEO: </font><font size=\"14\" color=\"#ffffa600\"><loc><a href=\"showinfo:1380//92223647\">Beth Ripley</a></loc></font><font size=\"14\" color=\"#bfffffff\"> (habitualmente a bordo de su Nostromo aunque hemos renombrado el nombre de la nave para evitar pagar licencias y royalties).</font>",
-      "home_station_id": 60006610,
-      "member_count": 3,
-      "name": "Industrias Machaque",
-      "shares": 1000,
-      "tax_rate": 0.05,
-      "ticker": "IN.MA",
-      "url": "http://www.eveonline.com"
-    }
+  body:
+    type: text
+    file: "${sim.path}/esiresponses/corporations.json"
 
 ---
 
@@ -364,22 +353,30 @@ simlet: character-ripley
 
 request:
   - method: GET
-  - uriPathPattern: "/character/{character_id}/"
+  - uriPathPattern: "/characters/{character_id}/"
 
 response:
-  from: stub
+  from: template
   status: 200
   headers:
     - "Content-Type: application/json"
-  body: |+
-    {
-      "ancestry_id": 22,
-      "birthday": "2012-07-05T21:53:15Z",
-      "bloodline_id": 4,
-      "corporation_id": 98384726,
-      "description": "",
-      "gender": "female",
-      "name": "Beth Ripley",
-      "race_id": 2,
-      "security_status": 0
-    }
+  body:
+    type: text
+    file: "${sim.path}/esiresponses/characters.json"
+
+---
+
+simlet: alliances-silent-infinity
+
+request:
+  - method: GET
+  - uriPathPattern: "/alliances/{alliance_id}/"
+
+response:
+  from: template
+  status: 200
+  headers:
+    - "Content-Type: application/json"
+  body:
+    type: text
+    file: "${sim.path}/esiresponses/alliances.json"
