--- a/NeoCom.Infinity.Frontend/package.json
+++ b/NeoCom.Infinity.Frontend/package.json
@@ -39,6 +39,7 @@
         "angular-webstorage-service": "1.0.2",
         "bootstrap": "4.3.1",
         "compression": "1.7.4",
+        "config": "3.2.3",
         "date-fns": "2.5.0",
         "express": "4.17.1",
         "font-awesome": "4.7.0",
@@ -55,7 +56,7 @@
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "0.803.1",
-        "@angular/cli": "8.3.1",
+        "@angular/cli": "8.3.12",
         "@angular/compiler-cli": "8.2.3",
         "@angular/language-service": "8.2.3",
         "@types/chai": "4.2.2",
