--- a/NeoCom.Infinity.Frontend/package.json
+++ b/NeoCom.Infinity.Frontend/package.json
@@ -42,6 +42,7 @@
         "config": "3.2.3",
         "date-fns": "2.5.0",
         "express": "4.17.1",
+        "express-http-proxy": "1.6.0",
         "font-awesome": "4.7.0",
         "jwt-decode": "2.2.0",
         "ng-drag-drop": "5.0.0",
