-[BACKEND] Added log interception to generate a different log aspect.
Former-commit-id: 18166d66c8366177ea49fbdf5a0c476c46e2e4d7

--- a/NeoCom.Infinity.Backend/backend.App/src/main/resources/application-dev.yml
+++ b/NeoCom.Infinity.Backend/backend.App/src/main/resources/application-dev.yml
@@ -8,6 +8,12 @@ P:
     filesystem:
       application:
         directory: ./NeoCom.Infinity.development
+    logging:
+      request: true
+      response: true
+      timing: true
+      metrics: true
+
 spring:
   datasource:
     url: "jdbc:postgresql://localhost:5432/postgres"
