-[FRONTEND][BUG] Server status does not produce the current expected response. Change the frontend to adapt to the new response.
Former-commit-id: 26aed0923d66d9257a69f082401aa24529aa4ef9

--- a/NeoCom.Infinity.Frontend/.gitignore
+++ b/NeoCom.Infinity.Frontend/.gitignore
@@ -7,7 +7,7 @@ node_modules/
 # Mock ignored files
 support/apisimulator-http-1.4/
 # Ignore assets not to be included on the repository
-src/assets/fonts/
+#src/assets/fonts/
 src/styles/fonts/
 
 # Project generated ignored files
@@ -16,4 +16,3 @@ coverage/
 out-tsc/
 dist/
 app/
-
