--- a/NeoCom.Infinity.Frontend/package.json
+++ b/NeoCom.Infinity.Frontend/package.json
@@ -66,7 +66,7 @@
         "@types/jasminewd2": "2.0.3",
         "@types/node": "8.9.4",
         "chai": "4.2.0",
-        "chromedriver": "^77.0.0",
+        "chromedriver": "79.0.0",
         "codelyzer": "5.0.0",
         "cucumber": "5.1.0",
         "jasmine-core": "3.4.0",
@@ -76,7 +76,7 @@
         "karma-coverage-istanbul-reporter": "2.0.1",
         "karma-jasmine": "2.0.1",
         "karma-jasmine-html-reporter": "1.4.0",
-        "protractor": "5.4.0",
+        "protractor": "5.4.2",
         "protractor-console-plugin": "0.1.1",
         "protractor-cucumber-framework": "6.1.3",
         "protractor-multiple-cucumber-html-reporter-plugin": "1.8.1",
