--- a/NeoCom.Infinity.Frontend/angular.json
+++ b/NeoCom.Infinity.Frontend/angular.json
@@ -58,6 +58,32 @@
                                     "maximumError": "10kb"
                                 }
                             ]
+                        },
+                        "e2e": {
+                            "fileReplacements": [{
+                                "replace": "src/environments/environment.ts",
+                                "with": "src/environments/environment.e2e.ts"
+                            }],
+                            "optimization": false,
+                            "outputHashing": "all",
+                            "sourceMap": true,
+                            "extractCss": true,
+                            "namedChunks": false,
+                            "aot": true,
+                            "extractLicenses": true,
+                            "vendorChunk": false,
+                            "buildOptimizer": true,
+                            "budgets": [{
+                                    "type": "initial",
+                                    "maximumWarning": "2mb",
+                                    "maximumError": "5mb"
+                                },
+                                {
+                                    "type": "anyComponentStyle",
+                                    "maximumWarning": "6kb",
+                                    "maximumError": "10kb"
+                                }
+                            ]
                         }
                     }
                 },
@@ -70,6 +96,9 @@
                     "configurations": {
                         "production": {
                             "browserTarget": "NeoCom-Infinity:build:production"
+                        },
+                        "e2e": {
+                            "browserTarget": "NeoCom-Infinity:build:e2e"
                         }
                     }
                 },
@@ -118,6 +147,9 @@
                     "configurations": {
                         "production": {
                             "devServerTarget": "NeoCom-Infinity:serve:production"
+                        },
+                        "e2e": {
+                            "devServerTarget": "NeoCom-Infinity:serve:e2e"
                         }
                     }
                 }
