--- a/NeoCom.Infinity.Frontend/package.json
+++ b/NeoCom.Infinity.Frontend/package.json
@@ -18,7 +18,7 @@
         "cucumber": "./node_modules/cucumber/bin/cucumber-js e2e/src/features/",
         "test:dev": "ng test --code-coverage --source-map --watch --progress ",
         "test:prod": "ng test --watch=false --no-progress --browsers=ChromeHeadlessCI",
-        "e2e": "ng e2e --port 4300",
+        "e2e": "ng e2e --port 4300 --configuration=e2e",
         "e2e:atdd": "ng e2e --port 4300 --host neocom.infinity.local --protractor-config e2e/protractor-cucumber.conf.js",
         "e2e:compile": "tsc -p e2e"
     },
