-[ACCEPTANCE] Replacing the e2e test engine with the cypress framework.
Former-commit-id: 0ce2abf8c0f4c0659b538bb51dc6ef493c561315

--- a/NeoCom.Infinity.Frontend/.gitignore
+++ b/NeoCom.Infinity.Frontend/.gitignore
@@ -10,3 +10,6 @@ coverage/
 # - Ignore support code and utilities
 support/apisimulator-http-1.4/
 support/backend-simulation/*.log
+
+# - Integration and acceptance tests
+cypress/
