--- a/NeoCom.Infinity.Frontend/package.json
+++ b/NeoCom.Infinity.Frontend/package.json
@@ -1,6 +1,6 @@
 {
     "name": "neocom.infinity",
-    "version": "0.16.2",
+    "version": "0.19.0",
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
@@ -28,14 +28,14 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "8.2.3",
-        "@angular/common": "8.2.3",
-        "@angular/compiler": "8.2.3",
-        "@angular/core": "8.2.3",
-        "@angular/forms": "8.2.3",
-        "@angular/platform-browser": "8.2.3",
-        "@angular/platform-browser-dynamic": "8.2.3",
-        "@angular/router": "8.2.3",
+        "@angular/animations": "8.2.14",
+        "@angular/common": "8.2.14",
+        "@angular/compiler": "8.2.14",
+        "@angular/core": "8.2.14",
+        "@angular/forms": "8.2.14",
+        "@angular/platform-browser": "8.2.14",
+        "@angular/platform-browser-dynamic": "8.2.14",
+        "@angular/router": "8.2.14",
         "angular-webstorage-service": "1.0.2",
         "bootstrap": "4.3.1",
         "compression": "1.7.4",
@@ -58,8 +58,9 @@
     "devDependencies": {
         "@angular-devkit/build-angular": "0.803.14",
         "@angular/cli": "8.3.14",
-        "@angular/compiler-cli": "8.2.11",
+        "@angular/compiler-cli": "^8.2.14",
         "@angular/language-service": "8.2.11",
+        "@bahmutov/add-typescript-to-cypress": "^2.1.2",
         "@types/chai": "4.2.2",
         "@types/cucumber": "4.0.7",
         "@types/jasmine": "3.3.8",
@@ -69,6 +70,8 @@
         "chromedriver": "79.0.0",
         "codelyzer": "5.0.0",
         "cucumber": "5.1.0",
+        "cypress": "^3.8.2",
+        "cypress-cucumber-preprocessor": "^1.19.2",
         "jasmine-core": "3.4.0",
         "jasmine-spec-reporter": "4.2.1",
         "karma": "4.1.0",
