--- a/NeoCom.Infinity.Frontend/package.json
+++ b/NeoCom.Infinity.Frontend/package.json
@@ -66,12 +66,13 @@
         "zone.js": "0.9.1"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "0.803.14",
-        "@angular/cli": "8.3.14",
+        "@angular-devkit/build-angular": "0.803.22",
+        "@angular/cli": "8.3.22",
         "@angular/compiler-cli": "8.2.14",
         "@angular/language-service": "8.2.11",
         "@bahmutov/add-typescript-to-cypress": "2.1.2",
-        "@cypress/webpack-preprocessor": "4.1.1",
+        "@cypress/code-coverage": "1.10.4",
+        "@types/cypress-cucumber-preprocessor": "^1.14.0",
         "@types/chai": "4.2.2",
         "@types/cucumber": "4.0.7",
         "@types/jasmine": "3.3.8",
@@ -82,7 +83,8 @@
         "codelyzer": "5.0.0",
         "cucumber": "5.1.0",
         "cypress": "3.8.2",
-        "cypress-cucumber-preprocessor": "^1.19.2",
+        "cypress-cucumber-preprocessor": "^2.0.1",
+        "istanbul-lib-coverage": "3.0.0",
         "jasmine-core": "3.4.0",
         "jasmine-spec-reporter": "4.2.1",
         "karma": "4.1.0",
@@ -90,15 +92,13 @@
         "karma-coverage-istanbul-reporter": "2.0.1",
         "karma-jasmine": "2.0.1",
         "karma-jasmine-html-reporter": "1.4.0",
+        "nyc": "15.0.0",
         "protractor": "5.4.2",
         "protractor-console-plugin": "0.1.1",
         "protractor-cucumber-framework": "6.1.3",
         "protractor-multiple-cucumber-html-reporter-plugin": "1.8.1",
-        "selenium-webdriver": "^4.0.0-alpha.5",
-        "ts-loader": "6.2.1",
         "ts-node": "7.0.0",
         "tslint": "5.15.0",
-        "typescript": "3.5.3",
-        "webpack": "4.41.5"
+        "typescript": "3.5.3"
     }
 }
