-[FRONTEND][ACCEPTANCE] Completed the configuration to use the new test framework. Starting to finish and fix tests.
Former-commit-id: 8bba19ea0f0b66017dea3f5caaee66f14bc3b97a

--- a/NeoCom.Infinity.Frontend/.gitignore
+++ b/NeoCom.Infinity.Frontend/.gitignore
@@ -12,4 +12,6 @@ support/apisimulator-http-1.4/
 support/backend-simulation/*.log
 
 # - Integration and acceptance tests
-# cypress/
+*.mp4
+.nyc_output/
+cypress/cucumber-json/
