--- a/NeoCom.Infinity.Frontend/package.json
+++ b/NeoCom.Infinity.Frontend/package.json
@@ -15,7 +15,10 @@
         "stop:support": "bash ./support/support-services.sh stop",
         "build:dev": "ng build --base-href /app",
         "build:prod": "ng build --aot --prod --configuration production --base-href /app",
-        "cucumber": "./node_modules/cucumber/bin/cucumber-js e2e/src/features/",
+        "cucumber": "$(npm bin)/cucumber-js ",
+        "cucumber:e2e": "$(npm bin)/cucumber-js e2e/src/features",
+        "cucumber:acceptance": "$(npm bin)/cucumber-js cypress/integration/**.feature",
+        "cypress:open": "$(npm bin)/cypress open",
         "test:dev": "ng test --code-coverage --source-map --watch --progress ",
         "test:prod": "ng test --watch=false --no-progress --browsers=ChromeHeadlessCI",
         "e2e": "ng e2e --port 4300 --configuration=e2e",
@@ -72,9 +75,10 @@
         "@angular/language-service": "8.2.11",
         "@bahmutov/add-typescript-to-cypress": "2.1.2",
         "@cypress/code-coverage": "1.10.4",
-        "@types/cypress-cucumber-preprocessor": "^1.14.0",
+        "@cypress/webpack-preprocessor": "4.1.1",
         "@types/chai": "4.2.2",
         "@types/cucumber": "4.0.7",
+        "@types/cypress-cucumber-preprocessor": "1.14.0",
         "@types/jasmine": "3.3.8",
         "@types/jasminewd2": "2.0.3",
         "@types/node": "8.9.4",
@@ -83,7 +87,7 @@
         "codelyzer": "5.0.0",
         "cucumber": "5.1.0",
         "cypress": "3.8.2",
-        "cypress-cucumber-preprocessor": "^2.0.1",
+        "cypress-cucumber-preprocessor": "2.0.1",
         "istanbul-lib-coverage": "3.0.0",
         "jasmine-core": "3.4.0",
         "jasmine-spec-reporter": "4.2.1",
@@ -97,8 +101,10 @@
         "protractor-console-plugin": "0.1.1",
         "protractor-cucumber-framework": "6.1.3",
         "protractor-multiple-cucumber-html-reporter-plugin": "1.8.1",
+        "ts-loader": "6.2.1",
         "ts-node": "7.0.0",
         "tslint": "5.15.0",
-        "typescript": "3.5.3"
+        "typescript": "3.5.3",
+        "webpack": "4.41.5"
     }
 }
